Nomeando os projetos

--- a/occam-core/pom.xml
+++ b/occam-core/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>occam-core</artifactId>
+    <name>occam-core</name>
     <description>
         Occam Core
 
