--- a/occam-example/pom.xml
+++ b/occam-example/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>occam-example</artifactId>
+    <name>occam-example</name>
+
 
     <dependencies>
         <dependency>
