--- a/occam-infra/pom.xml
+++ b/occam-infra/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>occam-infra</artifactId>
+    <name>occam-infra</name>
     <description>
         Occam Infra
 
